# phase-1

./: CSE687-Project1.cpp  CSE687-Project1.rc  CSE687-Project1.sln  CSE687-Project1.vcxproj  CSE687-Project1.vcxproj.filters  CppProperties.json  Map.cpp  Map.h  Resource.h  Source.cpp  Source.h  sample.txt  test2.txt  test3.txt
Class_Map/: CMakeLists.txt  Map.cpp  Map.h  README  Source.cpp  Source.h  fileIO.cpp  fileIO.h
Class_Map/middleDir/: TheComedyOfErrors_0.txt  TheComedyOfErrors_4.txt  TheComedyOfErrors_5.txt  TheMerchantOfVenice_0.txt  TheMerchantOfVenice_1.txt  TheMerchantOfVenice_2.txt  TheMerchantOfVenice_3.txt  TheMerchantOfVenice_4.txt  TheMerchantOfVenice_5.txt  TheMerchantOfVenice_6.txt  guru99_0.txt  head_0.txt
Class_Map/src/: FileIO.cpp  FileIO.h  Map.cpp  Map.h  MapReduceSorter.cpp  MapReduceSorter.h  MapReducer.cpp  Reduce.cpp  Source.cpp  Source.h  TestMap.cpp  TestMap.h
FileIO/: fileIO.cpp  fileIO.h
ReduceClass/: CMakeLists.txt  Reduce.cpp  Reduce.h  tasks.json  testReduce.cpp
Sample-Test1/: Sample-Test1.aps  Sample-Test1.sln  Sample-Test1.vcxproj  resource.h  test.cpp
Sample-Test1/x64/Debug/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt
Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
mapReduceCMake/: CMakeLists.txt  mapReduceCMake.cpp  mapReduceCMake.h
mapReduceCMake/FileIO/: fileIO.cpp
mapReduceCMake/demo/classDemo/middle/SorterOutput/: SortedFile.txt
mapReduceCMake/demo/middleDir/: boat.txt  fish.txt  head.txt  postMap_boat.txt
mapReduceCMake/demo/middleDir/MapOutput/: TheComedyOfErrors_0.txt  TheComedyOfErrors_4.txt  TheComedyOfErrors_5.txt  TheMerchantOfVenice_0.txt  TheMerchantOfVenice_2.txt  TheMerchantOfVenice_3.txt  TheMerchantOfVenice_5.txt  TheMerchantOfVenice_6.txt  TheMerchantOfVenice_7.txt
mapReduceCMake/demo/middleDir/SorterOutput/: SortedFile.txt
mapReduceCMake/demo/middleDir_SampleFiles/: TheComedyOfErrors_0.txt  TheComedyOfErrors_1.txt  TheComedyOfErrors_2.txt  TheComedyOfErrors_3.txt  TheComedyOfErrors_4.txt  TheComedyOfErrors_5.txt  TheMerchantOfVenice_0.txt  TheMerchantOfVenice_1.txt  TheMerchantOfVenice_2.txt  TheMerchantOfVenice_3.txt  TheMerchantOfVenice_4.txt  TheMerchantOfVenice_5.txt  TheMerchantOfVenice_6.txt  TheMerchantOfVenice_7.txt  boat_0.txt  fish_0.txt  guru99_0.txt  head_0.txt  test1_0.txt
mapReduceCMake/demo/oconnorDemo/: SortedFile_Expected.txt
mapReduceCMake/demo/oconnorDemo/middle/MapOutput/: boat_0.txt  fish_0.txt  guru99_0.txt  head_0.txt
mapReduceCMake/demo/oconnorDemo/middle/SorterOutput/: SortedFile.txt
mapReduceCMake/src/: CMakeLists.txt  MapReducer.cpp  MapReducer.h  main.cpp
mapReduceCMake/src/FileIO/: CMakeLists.txt  FileIO.cpp  FileIO.h  FileIOTester.cpp
mapReduceCMake/src/FileIO/ConfigFiles/: createdboatOutput.txt
mapReduceCMake/src/FileIO/ConfigFiles/files/: syr.txt
mapReduceCMake/src/Google_tests/: CMakeLists.txt
mapReduceCMake/src/Google_tests/lib/: CMakeLists.txt
mapReduceCMake/src/Map/: CMakeLists.txt  Map.cpp  Map.h  TestMap.cpp  TestMap.h
mapReduceCMake/src/Map/Test/: TestMap.cpp
mapReduceCMake/src/Map/Test/middleDir/: Test_createMap_0.txt  Test_createMap_2.txt  Test_emptyCache_0.txt  Test_exportMap_0.txt  Test_flushMap_0.txt  TheComedyOfErrors_1.txt  TheComedyOfErrors_2.txt  TheComedyOfErrors_3.txt  TheMerchantOfVenice_1.txt  TheMerchantOfVenice_4.txt  test1_0.txt
mapReduceCMake/src/Map/test/middleDir/: Test_apostrophe_0.txt  Test_flushMap_1.txt
mapReduceCMake/src/ReduceClass/: Reduce.cpp  Reduce.h  testReduce.cpp  testReduce.h
mapReduceCMake/src/ReduceClass/Test/: testReduce.cpp  testReduce.h
mapReduceCMake/src/Sorter/: CMakeLists.txt  MapReduceSorter.cpp  MapReduceSorter.h  MapSorterTester.cpp
mapReduceCMake/src/Sorter/test/: MapReduceSorter.cc
phase1MapReduce/: phase1MapReduce.cpp  phase1MapReduce.vcxproj  phase1MapReduce.vcxproj.filters
phase1MapReduce/Debug/: vc142.idb
phase1MapReduce/Debug/phase1MapReduce.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  phase1MapReduce.lastbuildstate
phase1MapReduce/FileIO/: fileIO.cpp
